--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <h1>{% block title %} Liste des Items {% endblock %}</h1>
-    <div class="">
+    <div class="container-fluid">
         <table id="example" class="display compact nowrap">
             <thead>
               <tr>
