--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/bs4/dt-1.10.23/fc-3.3.2/fh-3.1.8/r-2.2.7/rg-1.1.2/datatables.min.css"/>
-    <link rel="stylesheet" href="static/css/style.css" >
+    <link rel="stylesheet" type="text/css"  href="static/css/style.css" >
        
     <title>{% block title %} {% endblock %}</title>
   </head>
@@ -27,9 +27,15 @@
                 <a class="nav-link" href="{{url_for('learning_session.create')}}">New Learning Session</a>
             </li>
             </ul>
+            <div class="pe-xl">
+              <a href="{{ url_for('google_auth.login') }}" class="btn btn-info me-xl" role="button">Login</a>
+            </div>
+            <div class="pe-xl">
+              <a href="{{ url_for('google_auth.logout') }}" class="btn btn-info me-xl" role="button">Logout</a>
+            </div>
         </div>
     </nav>
-    <div class="">
+    <div class="container-fluid">
         {% with messages = get_flashed_messages(with_categories=true) %}
         {% if messages %}
           {% for category, message in messages %}
